[package]
name = "dot-jaeger"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>", "Parity Tools Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
argh = "0.1.4"
ctrlc = "3.1.7"
env_logger = "0.8.3"
hex = "0.4.2"
log = "0.4.14"
prometheus = "0.12"
tiny_http = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
ureq = { version = "2.0.1", features = ["json"] }
rand = "0.8.3"
itertools = "0.10.0"
jod-thread = "0.1.2"
ascii = "1.0.0"
daggy = "0.7"
